--- a/hw04.md
+++ b/hw04.md
@@ -9,4 +9,14 @@
 二
 
 1）
-中 
+
+|字符  |  ASCII 码|  Unicode 码| utf-8 编码 |
+|--|--|--|--|
+|A | （01000001）2 | 0041 | （65）10 |
+| 中 | （229）10 | U4e2d | &#x4E2D  |
+
+2）yellow（255，255，0）
+
+3）PNG   10%   50%    14%
+
+4）lossless
