--- a/hw05.md
+++ b/hw05.md
@@ -13,6 +13,7 @@
 ![ ](https://img-blog.csdn.net/20181022202051664?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQzMjY3Nzcz/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
 
 
+4）
 | A | B | (A+B)⊕A' |
 |--|--|--|
 | 1 | 0 | 1 |
@@ -20,15 +21,22 @@
 | 1 | 1 | 1 |
 | 0 | 0 | 1 |
 
-4）
 
 5）
+等价电路：电路输入输出相同，中间经过的电路过程不同。
 
 **part 2 of 2**
 
 6）
+![](https://img-blog.csdn.net/20181023005244353?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzQzMjY3Nzcz/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
 
 7）
+
+(1) (X8+0X7+0X6+0X5+01111)2
+
+(2)(X8⊕1X7⊕1X6⊕1X5⊕1X4⊕1X3⊕1X2⊕1X1⊕1)2
+
+(3)(X8⊕0X7⊕0X6⊕0X5⊕0X4⊕0X3⊕0X2⊕0X1⊕0)2
 
 **part 3 of 3**
 
