--- a/hw07.md
+++ b/hw07.md
@@ -1,2 +1,31 @@
 我的第七次作业：
 
+1.
+
+1）
+
+2）
+
+3）
+
+4）
+
+2.
+
+1）各类数据
+
+2）可以
+
+3）![](http://img0.ph.126.net/RHmgDWj3kSuaZQv1zIUcHQ==/6630587279118746136.gif)
+
+3.
+
+1）**汇编语言**是一种用于电子计算机、微处理器、微控制器，或其他可编程器件的低级语言。在不同的设备中，汇编语言对应着不同的机器语言指令集。一种汇编语言专用于某种计算机系统结构，而不像许多高级语言，可以在不同系统平台之间移植。
+
+2）**编译器**，是一种计算机程序，它会将用某种编程语言写成的源代码（原始语言），转换成另一种编程语言（目标语言）。
+
+3）在计算机科学中，**命令式编程**是一种编程范式，它使用改变程序状态的语句。 与自然语言中的命令性情绪表达命令的方式大致相同，命令式程序由计算机执行的命令组成。 命令式编程侧重于描述程序的运行方式。
+
+4）**函数式编程**或称函数程序设计，又称泛函编程，是一种编程典范，它将计算机运算视为数学上的函数计算，并且避免使用程序状态以及易变对象。函数编程语言最重要的基础是λ演算。而且λ演算的函数可以接受函数当作输入（引数）和输出（传出值）。
+
+5）**过程式程序设计**，又称过程式编程、过程化编程，一种编程典范，有时会被视为是指令式编程的同义语。派生自结构化编程，主要采取程序调用或函数调用的方式来进行流程控制。流程则由包涵一系列运算步骤的程序，例程，子程序, 方法，或函数来控制。在程序运行的任何一个时间点，都可以调用某个特定的程序。任何一个特定的程序，也能被任意一个程序或是它自己本身调用。
