--- a/hw07.md
+++ b/hw07.md
@@ -2,13 +2,31 @@
 
 1.
 
-1）
+1）assembly code：LOD # 1–>STO X –> LOD X –> ADD#3 –> STO Y –> HLT
+
+machine code：0001 0100 0000 0001–>0000 0101 1000 0000–>0000 0100 1000 0000–>0001 0000 0000 0011–>0000 0101 1000 0010–>0000 1111 0000 0000
 
 2）
 
+①下一条指令从当前存储在程序计数器中的存储器地址中取出，并存储到指令寄存器中。PC指向下一个指令。
+
+②解码器解释存在于指令寄存器中的编码指令。
+
+③如果指令有间接地址，从主存储器读取有效地址并取出数据进行处理，然后放入数据寄存器。如果指令是直接指令，则在此期间不执行任何操作。如果这是I / O指令或寄存器指令，则在此期间执行操作。
+
+④CPU的控制单元将解码后的信息作为一系列控制信号传递给CPU的相关功能单元，以执行指令所需的动作，操作生成的结果存储在主存储器中或发送到输出设备。
+
 3）
 
-4）
+**IR**：保存当前正在执行的一条指令
+
+**PC**：用来存放后续指令地址
+
+**ACC**：专门用来存放操作数或运算结果
+
+
+
+4）a和c是标识符，与某个特定的内存单元相关联。在翻译为机器语言时，这些标识符会代替这个特定内存单元的地址。
 
 2.
 
@@ -16,7 +34,9 @@
 
 2）可以
 
-3）![](http://img0.ph.126.net/RHmgDWj3kSuaZQv1zIUcHQ==/6630587279118746136.gif)
+3）ADD X :00000000 10000000
+
+前八位称命令指示，第四位为寻址模式，例子中为0，表示操作数是该地址的内容；后八位称为操作数，表示数值或地址，例子中表示内存中地址128。整个例子表示加上将内存地址128中的数据
 
 3.
 
